--- a/templates/schema.html
+++ b/templates/schema.html
@@ -15,5 +15,11 @@
 	  {% block content %}
 	  {% endblock %}
 	</div>
+
+	<footer class="footer bg-light fixed-bottom justify-content-center">
+	  <div class="container justify-content-center">
+        <p class="text-secondary text-right">Mario Varas . 2019</p>
+      </div>
+	</footer>
   </body>
 </html>
