--- a/templates/index.html
+++ b/templates/index.html
@@ -50,17 +50,11 @@
 
 	    </div>
 	  </form>
-	</div></div></div>
-
-	<div class="progress">
-	  <div id="progress" class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
 	</div>
-	
-	<progress value="100" max="100"></progress>
-	  <!--<form action = "/download" method = "POST">
-         <p>Maths <input type = "text" name = "algo" /></p>
-         <p><input type = "submit" value = "submit" /></p>
-      </form>-->
+	  <div class="d-flex justify-content-center" style="margin-top: -80">
+		  <progress value="100" max="100"></progress>
+	  </div>
+	</div></div>
 	  
 	<hr class="my-2 col-6"><br>
 	<div class="row d-flex justify-content-center"><div class="col-xl-5 pb-2">
@@ -126,41 +120,26 @@ $(function () {
 		  // location.reload();
 	  });
   }
-
-start_progressbar();
-  function start_progressbar() {console.log("!");
-	function loop() {
-		$(".progress-bar").animate({
-			width: "100%"
-		}, 5000, "linear", function() {console.log("...");});
-	}
-	loop();
-  }
-  /** 
- * This code is only used for animating the progress bar
- *     it can be safely removed
- *     as all styling is done in CSS
  
-var progressVal = $('#progress').aria-valuenow(),
+var progressVal = $('progress').val(),
     progressStep = 20,
     progressDirection = 1;
 
-setInterval(function() {
-  console.log(progressDirection, progressVal);
-  
-  if (progressDirection > 0 && progressVal < 100) {
-    progressVal += progressStep;
-    $('#progress').aria-valuenow(progressVal);
-  } else if (progressDirection < 0 && progressVal > 0) {
-    progressVal -= progressStep;
-    $('#progress').aria-valuenow(progressVal);
-  } else if (progressVal == 100) {
-    progressDirection = -1;
-  } else if (progressVal == 0) {
-    progressDirection = 1;
-  }
-}, 500)*/
-	  
+function start_progressbar() {
+	while (1) {	
+		if (progressDirection > 0 && progressVal < 100) {
+		  progressVal += progressStep;
+		  $('progress').val(progressVal);
+		} else if (progressDirection < 0 && progressVal > 0) {
+		  progressVal -= progressStep;
+		  $('progress').val(progressVal);
+		} else if (progressVal == 100) {
+		  progressDirection = -1;
+		} else if (progressVal == 0) {
+		  progressDirection = 1;
+		}
+	}
+}	  
 </script>
 
 </div>
